# TG-bot-bookparser

./: .env.sample  README.md  pyproject.toml
tg_core/: main.py  parser.csv
tg_core/database/: config.py  models.py
tg_core/handlers/: basics.py  services.py
